// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interactive Replacement Token Page should reject if there are errors 1`] = `
<div>
  <div
    class="mm-box page-container"
    data-testid="interactive-replacement-token"
  >
    <div
      class="mm-box page-container__header false"
    >
      <div
        class="mm-box page-container__title"
      >
        Replace custodian token
         
        
      </div>
      <div
        class="mm-box page-container__subtitle"
      >
        This is will replace the custodian token for the following address:
      </div>
    </div>
    <div
      class="mm-box page-container__content"
    >
      <div
        class="mm-box interactive-replacement-token-page mm-box--margin-right-7 mm-box--margin-left-7 mm-box--display-flex mm-box--color-text-alternative"
      >
        <div
          class="mm-box mm-box--display-flex mm-box--flex-direction-column mm-box--width-full"
          data-testid="interactive-replacement-token-page"
        />
      </div>
    </div>
    <footer
      class="mm-box page-container__footer mm-box--padding-4"
    >
      <div
        class="pulse-loader"
        data-testid="pulse-loader"
      >
        <div
          class="pulse-loader__loading-dot-one"
        />
        <div
          class="pulse-loader__loading-dot-two"
        />
        <div
          class="pulse-loader__loading-dot-three"
        />
      </div>
    </footer>
  </div>
</div>
`;

exports[`Interactive Replacement Token Page should reject if there are errors 2`] = `
<div>
  <div
    class="mm-box page-container"
    data-testid="interactive-replacement-token"
  >
    <div
      class="mm-box page-container__header error"
    >
      <div
        class="mm-box page-container__title"
      >
        Replace custodian token
         
        failed
      </div>
    </div>
    <div
      class="mm-box page-container__content"
    >
      <div
        class="mm-box interactive-replacement-token-page mm-box--margin-right-7 mm-box--margin-left-7 mm-box--display-flex mm-box--color-text-alternative"
      >
        <p
          class="mm-box mm-text mm-text--body-md mm-text--overflow-wrap-break-word mm-box--color-text-default"
          data-testid="connect-error-message"
        >
          Please go to displayName and click the 'Connect to MMI' button within their user interface to connect your accounts to MMI again.
        </p>
      </div>
    </div>
    <footer
      class="mm-box page-container__footer mm-box--padding-4"
    >
      <div
        class="mm-box mm-box--display-flex mm-box--gap-4"
      >
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-secondary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-default mm-box--background-color-transparent mm-box--rounded-pill mm-box--border-color-primary-default box--border-style-solid box--border-width-1"
        >
          Reject
        </button>
        <button
          class="mm-box mm-text mm-button-base mm-button-base--size-lg mm-button-base--block mm-button-primary mm-text--body-md-medium mm-box--padding-0 mm-box--padding-right-4 mm-box--padding-left-4 mm-box--display-inline-flex mm-box--justify-content-center mm-box--align-items-center mm-box--color-primary-inverse mm-box--background-color-primary-default mm-box--rounded-pill"
          data-theme="light"
        >
          displayName
        </button>
      </div>
    </footer>
  </div>
</div>
`;
